--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,28 @@ body {
   
   .title {
     color: #5ebec4;
+    font-size: 52px;
+    text-align: center;
+    font-weight: 1000;
+    text-shadow: 3px 3px black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-
   .foodlist {
-      color: #f92c85
+      color: black;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      border-radius: 5px;
+      font-size:14px;
+      padding: 2px;
+      margin: 20px;
+      background-color: lightgrey;
+  }
+  .introduction {
+    text-align: center;
+    border-radius:10px;
+    font-size:20px;
+    padding:20px;
+    margin:10px;
+    background-color: lightpink;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
   }
